<resources>
    <string name="app_name">physical</string>
    <string name="title_toolbar">กายภาพบำบัด</string>

    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="age">อายุ</string>
    <string name="paralysis">ประเภมอัมพาต</string>
    <string name="muscle">กำลังกล้ามเนื้อ</string>
    <string name="detail">รายละเอียด</string>

    <string name="name_sur">เกวลิน แก้วมณี</string>
    <string name="school">............</string>

</resources>
