<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSave">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/magin1"
            android:orientation="vertical">

            <!--Gender-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="gender :"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/ragGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ragMale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/ragFemale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textStyle="bold" />

            </RadioGroup>


            <!--Age-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/age"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <!--Paralysis type-->
            <TextView
                android:id="@+id/ragtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/paralysis"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </RadioGroup>


            <!--Muscle power-->

            <!--Detail-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="5" />

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:text="Save Data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>